--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     text-transform: uppercase;
+    background-image: url("../img/ship.jpg");
 }
 
 main {
